# pyweb-hw-07

./: README.md  pyproject.toml
pyweb_hw_07/: config.ini  crud.py  main.py  my_select.py
pyweb_hw_07/alembic/: env.py
pyweb_hw_07/alembic/versions/: 32a008bc6209_add_date_of_for_score.py  356a1cc6e40d_init.py
pyweb_hw_07/conf/: db.py  models.py
pyweb_hw_07/seeds/: init.py
