[tool.poetry]
name = "pyweb-hw-07"
version = "0.1.0"
description = ""
authors = ["Spica12 <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
faker = "^20.1.0"

[tool.poetry.scripts]
db = 'pyweb_hw_07.conf.db'
models = 'pyweb_hw_07.conf.models'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
